<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_700">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/titre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/simple_quiz"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="42sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/totalQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_will_be_the_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalQuestion"
        android:textSize="22sp"
        android:layout_marginTop="26dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <Button
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/ans_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question" />

    <Button
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ans_b"
        android:layout_margin="20dp"/>
    <Button
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ans_c"
        android:layout_margin="20dp"/>
    <Button
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ans_d"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sumbit"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/purple_200"/>

</androidx.constraintlayout.widget.ConstraintLayout>